[package]
name = "lighthouse-cli"
version = "0.1.0"
edition = "2021"
description = "Forgemaster's Lighthouse — orient, relay, gate for fleet task management"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "lighthouse"
path = "src/main.rs"

[workspace]
